[risk=no][no ticket] Minor unit test cleanups (#8833)